@@ -1,5 +1,11 @@
 2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>
 
+	* src/Makefile.am: Rename uuencode/uudecode to
+	gmime-uuencode/decode to prevent naming collisions with the GNU
+	Sharutils tools. Fixes bug #667073.
+
+2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>
+
 	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Fixed returns
 	without a return value. Also fixed up some error-handling.
 
